Changelog:

Key:
  + Addition
  = Fix
  ! Change
  - Removal

Version 1.1.8 | Tested on CB 1.7.5-R0.1
 + Added new Items config file, define items with displaynames/lore here which will be Soulbound
 + Added feature which allows you to Soulbind items on respawn, useful for spawnkits.
 + Added MythicDrops 1.1.2 AND 2.0.0 support. Thanks Nunnery!
 + Added UUID support

Version 1.1.7 | Tested on CB 1.6.4-R0.1
 - Removed old Updater class

Version 1.1.6 | Tested on CB 1.6.4-R0.1
 ! Changed Updater, now uses Gravity's updater v2.0
 ! Changed notification messages when dependencies are found, they're hidden by default

Version 1.1.5 | Tested on CB 1.6.2-R1.0
 + Added new config option; "Delete_On_Drop"
 + Added new permission nodes soulbound.items.keep_on_death and soulbound.items.delete_on_death, both are false by default
 = Fixed bug where soulbound items would disappear when dropping them by dragging them out of the inventory
 = Fixed MythicDrops support, works with MythicDrops 1.1.2
 ! Changed config file system, files now automatically update
 ! Changed "Allow_Item_Drop" to "Prevent_Item_Drop"
 - Removed config options "Keep_On_Death" and "Delete_On_Death". Use permissions instead!
 - Removed DiabloDrops support

Version 1.1.4 | Tested on CB 1.5.2-R0.1
 + Added a new configuration option to prevent using certain commands when holding a Soulbound item
 + Added a new configuration option to Soulbind the item in hand when a certain command is used.
 + Added an option to disable the feedback messages "Inventory now Soulbound to.."
 ! Hoppers can no longer pickup Soulbound items
 = Fixed infinite durability not working for armor and special tools

Version 1.1.3 | Tested on CB 1.5.0-R0.1
 + Added MythicDrops support
 + Added permission node which allows certain players to pickup items which are not Soulbound to that player
 + Added permission node which limit the maximum amount of Soulbound items a player can carry at once