@@ -10,15 +10,17 @@ import com.me.tft_02.soulbound.util.ItemUtils;
 
 public class SoulbindInventoryTask extends BukkitRunnable {
     private Player player;
+    private ActionType actionType;
 
-    public SoulbindInventoryTask(Player player) {
+    public SoulbindInventoryTask(Player player, ActionType actionType) {
         this.player = player;
+        this.actionType = actionType;
     }
 
     @Override
     public void run() {
         for (ItemStack itemStack : player.getInventory().getContents()) {
-            if (itemStack != null && ItemsConfig.getInstance().isActionItem(itemStack, ActionType.RESPAWN)) {
+            if (itemStack != null && ItemsConfig.getInstance().isActionItem(itemStack, actionType)) {
                 ItemUtils.soulbindItem(player, itemStack);
             }
         }
